fix top alignment

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,5 @@
-/* .new-tweet {
-  margin: 10px auto 30px;
-  display: none;
-} */
-
 .new-tweet {
-  margin: 10px auto 30px;
-  /* display: none; */
+  margin: 0;
   max-height: 0;
   transition: max-height 0.5s ease-out;
   overflow: hidden;
@@ -13,6 +7,7 @@
 
 .new-tweet.show {
   max-height: 250px;
+  margin: 10px auto 30px;
 }
 
 .new-tweet textarea {
